force-app/main/default/objects/TRSBill__c/TRSBill__c.object-meta.xml
<CustomObject>
    <label>TRS Bill</label>
    <nameField>
        <displayFormat>TB-{000000}</displayFormat>
        <label>TRS BILL ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TRS Bill</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>