force-app/main/default/objects/TRSBill__c/fields/AdvancePayOBHOurCompany__c.field-meta.xml
<CustomField>
    <fullName>AdvancePayOBHOurCompany__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ADVANCE PAYMENT ON BEHALF OF OUR COMPANY</label>
    <type>Checkbox</type>
</CustomField>