force-app/main/default/objects/TRSBill__c/fields/AmountBuyInclTAX__c.field-meta.xml
<CustomField>
    <fullName>AmountBuyInclTAX__c</fullName>
    <label>AMOUNT BUYING INCL TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>