force-app/main/default/objects/TRSBill__c/fields/AmountBuyInclTAXUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountBuyInclTAXUSD__c</fullName>
    <label>AMOUNT BUYING INCL TAX(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>