force-app/main/default/objects/TRSBill__c/fields/AmountOfBuyTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountOfBuyTaxUSD__c</fullName>
    <label>AMOUNT OF BUYING TAX(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>