force-app/main/default/objects/TRSBill__c/fields/AmountOfSellTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountOfSellTaxUSD__c</fullName>
    <label>AMOUNT OF SELLING TAX(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>