force-app/main/default/objects/TRSBill__c/fields/AmountRcvCustomerLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountRcvCustomerLocal__c</fullName>
    <label>AMOUNT RECEIVED FROM CUSTOMER(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>