force-app/main/default/objects/TRSBill__c/fields/AmountSelliInclTAXLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountSelliInclTAXLocal__c</fullName>
    <label>AMOUNT SELLING INCL TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>