force-app/main/default/objects/TRSBill__c/fields/BankAccountForPay__c.field-meta.xml
<CustomField>
    <fullName>BankAccountForPay__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK ACCOUNT FOR PAYMENT</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>TRS BILL</relationshipLabel>
    <relationshipName>TRSBillBankACPayment</relationshipName>
    <type>Lookup</type>
</CustomField>