force-app/main/default/objects/TRSBill__c/fields/BillDisplayNo__c.field-meta.xml
<CustomField>
    <fullName>BillDisplayNo__c</fullName>
    <label>BILLING DISPLAY NO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>