force-app/main/default/objects/TRSBill__c/fields/BillNameAtPrintENG__c.field-meta.xml
<CustomField>
    <fullName>BillNameAtPrintENG__c</fullName>
    <label>BILL NAME AT PRINT(ENG)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>