force-app/main/default/objects/TRSBill__c/fields/BuyCreditACCode__c.field-meta.xml
<CustomField>
    <fullName>BuyCreditACCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BUYING CREDIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>TRS BILL</relationshipLabel>
    <relationshipName>TRSBillBuyCreditACCode</relationshipName>
    <type>Lookup</type>
</CustomField>