force-app/main/default/objects/TRSBill__c/fields/BuyDebitACCode__c.field-meta.xml
<CustomField>
    <fullName>BuyDebitACCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BUYING DEBIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>TRS BILL (BUYING DEBIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>TRSBillBuyDebitACCode</relationshipName>
    <type>Lookup</type>
</CustomField>