force-app/main/default/objects/TRSBill__c/fields/CurrencyConversionBuy__c.field-meta.xml
<CustomField>
    <fullName>CurrencyConversionBuy__c</fullName>
    <label>CURRENCY CONVERSION FOR BUYING</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CurrencyConversion</valueSetName>
    </valueSet>
</CustomField>