force-app/main/default/objects/TRSBill__c/fields/EXrateBuyVAT__c.field-meta.xml
<CustomField>
    <fullName>EXrateBuyVAT__c</fullName>
    <label>EXCHANGE RATE-BUYING(VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>