force-app/main/default/objects/TRSBill__c/fields/EXRateIDVAT__c.field-meta.xml
<CustomField>
    <fullName>EXRateIDVAT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EXCHANGE RATE ID-VAT</label>
    <referenceTo>MgmtMaster__c</referenceTo>
    <relationshipLabel>TRS BILL (EXCHANGE RATE ID-VAT)</relationshipLabel>
    <relationshipName>TRSBillEXRateIDVAT</relationshipName>
    <type>Lookup</type>
</CustomField>