force-app/main/default/objects/TRSBill__c/fields/EXRateSellVAT__c.field-meta.xml
<CustomField>
    <fullName>EXRateSellVAT__c</fullName>
    <label>EXCHANGE RATE-SELLING(VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>