force-app/main/default/objects/TRSBill__c/fields/FinalQuantityGoodsPOProduct__c.field-meta.xml
<CustomField>
    <fullName>FinalQuantityGoodsPOProduct__c</fullName>
    <formula>GoodsPOProduct__r.FinalQuantity__c</formula>
    <label>Final Quantity in Goods P/O+Product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>