force-app/main/default/objects/TRSBill__c/fields/FinalQuantityGoodsSOProduct__c.field-meta.xml
<CustomField>
    <fullName>FinalQuantityGoodsSOProduct__c</fullName>
    <formula>GoodsSOProduct__r.FinalQuantity__c</formula>
    <label>Final Quantity in Goods S/O+Product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>