force-app/main/default/objects/TRSBill__c/fields/GoodsPOProduct__c.field-meta.xml
<CustomField>
    <fullName>GoodsPOProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Goods P/O+Product</label>
    <referenceTo>GoodsPOProduct__c</referenceTo>
    <relationshipLabel>TRS BILL (GOODS P/O+PRODUCT)</relationshipLabel>
    <relationshipName>TRSBillPOProduct</relationshipName>
    <type>Lookup</type>
</CustomField>