force-app/main/default/objects/TRSBill__c/fields/GoodsPOProductID__c.field-meta.xml
<CustomField>
    <fullName>GoodsPOProductID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Goods P/O+Product ID(old)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.GoodsPOID__c</field>
            <operation>equals</operation>
            <valueField>GoodsPOProduct__c.GoodsPOID__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>GoodsPOProduct__c</referenceTo>
    <relationshipLabel>TRS BILL</relationshipLabel>
    <relationshipName>TRSBill</relationshipName>
    <type>Lookup</type>
</CustomField>