force-app/main/default/objects/TRSBill__c/fields/GoodsPOUpdateStatus__c.field-meta.xml
<CustomField>
    <fullName>GoodsPOUpdateStatus__c</fullName>
    <label>Goods P/O Update Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BillUpdateStatus</valueSetName>
    </valueSet>
</CustomField>