force-app/main/default/objects/TRSBill__c/fields/GoodsSOProductID__c.field-meta.xml
<CustomField>
    <fullName>GoodsSOProductID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>not in use. will be deleted</inlineHelpText>
    <label>Goods S/O+Product ID(Old)</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>SalesOrderProduct__c.GoodSalesOrderID__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>SalesOrderProduct__c</referenceTo>
    <relationshipLabel>TRS BILL</relationshipLabel>
    <relationshipName>TRSBill</relationshipName>
    <type>Lookup</type>
</CustomField>