force-app/main/default/objects/TRSBill__c/fields/ListPriceBeforeDiscountFCY__c.field-meta.xml
<CustomField>
    <fullName>ListPriceBeforeDiscountFCY__c</fullName>
    <label>List Price before Discount(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>