force-app/main/default/objects/TRSBill__c/fields/mountSellInclTAXUSD__c.field-meta.xml
<CustomField>
    <fullName>mountSellInclTAXUSD__c</fullName>
    <label>AMOUNT SELLING INCL TAX(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>