force-app/main/default/objects/TRSBill__c/fields/NetWeightMT__c.field-meta.xml
<CustomField>
    <fullName>NetWeightMT__c</fullName>
    <label>Net Weight(MT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>