force-app/main/default/objects/TRSBill__c/fields/PayConfirmedBuy__c.field-meta.xml
<CustomField>
    <fullName>PayConfirmedBuy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAYMENT CONFIRMED-BUYING</label>
    <type>Checkbox</type>
</CustomField>