force-app/main/default/objects/TRSBill__c/fields/PayDueDate__c.field-meta.xml
<CustomField>
    <fullName>PayDueDate__c</fullName>
    <label>PAYMENT DUE DATE</label>
    <type>Date</type>
</CustomField>