force-app/main/default/objects/TRSBill__c/fields/PaySettledDateBuying__c.field-meta.xml
<CustomField>
    <fullName>PaySettledDateBuying__c</fullName>
    <label>PAYMENT SETTLED DATE-BUYING</label>
    <type>Date</type>
</CustomField>