force-app/main/default/objects/TRSBill__c/fields/PayTypeBuying__c.field-meta.xml
<CustomField>
    <fullName>PayTypeBuying__c</fullName>
    <label>PAYMENT TYPE-BUYING</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ReceiptancePaymentType</valueSetName>
    </valueSet>
</CustomField>