force-app/main/default/objects/TRSBill__c/fields/PlanGWMT__c.field-meta.xml
<CustomField>
    <fullName>PlanGWMT__c</fullName>
    <label>Plan G.W(MT)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>