force-app/main/default/objects/TRSBill__c/fields/ProductNamedetailatprintEng__c.field-meta.xml
<CustomField>
    <fullName>ProductNamedetailatprintEng__c</fullName>
    <label>Product Name detail at print(Eng)</label>
    <type>TextArea</type>
</CustomField>