force-app/main/default/objects/TRSBill__c/fields/ProductNameonPackingList__c.field-meta.xml
<CustomField>
    <fullName>ProductNameonPackingList__c</fullName>
    <label>Product Name on Packing List</label>
    <type>TextArea</type>
</CustomField>