force-app/main/default/objects/TRSBill__c/fields/ProfitInclTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>ProfitInclTaxUSD__c</fullName>
    <formula>mountSellInclTAXUSD__c -  AmountBuyInclTAXUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PROFIT INCL TAX(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>