force-app/main/default/objects/TRSBill__c/fields/ProfitRatioInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>ProfitRatioInclTaxLocal__c</fullName>
    <formula>(AmountSelliInclTAXLocal__c -  AmountBuyInclTAX__c ) /AmountSelliInclTAXLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PROFIT RATIO INCL TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>