force-app/main/default/objects/TRSBill__c/fields/ProfitRatioInclTaxUS__c.field-meta.xml
<CustomField>
    <fullName>ProfitRatioInclTaxUS__c</fullName>
    <formula>(mountSellInclTAXUSD__c - AmountBuyInclTAXUSD__c )/ mountSellInclTAXUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PROFIT RATIO INCL TAX(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>