force-app/main/default/objects/TRSBill__c/fields/ProfitRatioNICTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>ProfitRatioNICTaxLocal__c</fullName>
    <formula>( TotalAmountOfSellLocal__c -  TotalAmountOfBuyLocal__c )/ TotalAmountOfSellLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PROFIT RATIO NIC TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>