force-app/main/default/objects/TRSBill__c/fields/ProfitRatioNICTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>ProfitRatioNICTaxUSD__c</fullName>
    <formula>( TotalAmountOfSellUSD__c -  TotalAmountOfBuyUSD__c )/TotalAmountOfSellUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PROFIT RATIO NIC TAX(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>