force-app/main/default/objects/TRSBill__c/fields/RcvNotesSell__c.field-meta.xml
<CustomField>
    <fullName>RcvNotesSell__c</fullName>
    <label>RECEIPTANCE NOTES-SELLING</label>
    <length>255</length>
    <type>Text</type>
</CustomField>