force-app/main/default/objects/TRSBill__c/fields/RcvSettledDate__c.field-meta.xml
<CustomField>
    <fullName>RcvSettledDate__c</fullName>
    <label>RECEIPTANCE SETTLED DATE-SELLING</label>
    <type>Date</type>
</CustomField>