force-app/main/default/objects/TRSBill__c/fields/SalesAccountedDate__c.field-meta.xml
<CustomField>
    <fullName>SalesAccountedDate__c</fullName>
    <label>SALES ACCOUNTED DATE</label>
    <type>Date</type>
</CustomField>