force-app/main/default/objects/TRSBill__c/fields/SalesOrderID__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderID__c</fullName>
    <label>SALES ORDER ID</label>
    <referenceTo>SALES_ORDER__c</referenceTo>
    <relationshipLabel>TRS BILL</relationshipLabel>
    <relationshipName>TRSBill</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>