force-app/main/default/objects/TRSBill__c/fields/SellDebitACCode__c.field-meta.xml
<CustomField>
    <fullName>SellDebitACCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SELLING DEBIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>TRS BILL (SELLING DEBIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>TRSBillSellDebitACCode</relationshipName>
    <type>Lookup</type>
</CustomField>