force-app/main/default/objects/TRSBill__c/fields/SellVATCreditACCode__c.field-meta.xml
<CustomField>
    <fullName>SellVATCreditACCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SELLING VAT CREDIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>TRS BILL (SELLING VAT CREDIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>TRSBillSellVATCreditACCode</relationshipName>
    <type>Lookup</type>
</CustomField>