force-app/main/default/objects/TRSBill__c/fields/SvcPricingName__c.field-meta.xml
<CustomField>
    <fullName>SvcPricingName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SVC PRICING NAME</label>
    <referenceTo>TariffMaster__c</referenceTo>
    <relationshipLabel>TRS BILL</relationshipLabel>
    <relationshipName>TRSBillSvcPricingName</relationshipName>
    <type>Lookup</type>
</CustomField>