force-app/main/default/objects/TRSBill__c/fields/TaxRatioBuy__c.field-meta.xml
<CustomField>
    <fullName>TaxRatioBuy__c</fullName>
    <label>TAX RATE-BUYING</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>