force-app/main/default/objects/TRSBill__c/fields/TotalAmountOfBuyUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfBuyUSD__c</fullName>
    <label>TOTAL AMOUNT OF BUYING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>