force-app/main/default/objects/TRSBill__c/fields/TotalAmountOfSellLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfSellLocal__c</fullName>
    <label>TOTAL AMOUNT OF SELLING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>