force-app/main/default/objects/TRSBill__c/fields/TotalAmountOfSellUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfSellUSD__c</fullName>
    <label>TOTAL AMOUNT OF SELLING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>