force-app/main/default/objects/TRSBill__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>UNIT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PricingUnit</valueSetName>
    </valueSet>
</CustomField>