force-app/main/default/objects/TRSBill__c/fields/UnitPriceOfBuyLocal__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceOfBuyLocal__c</fullName>
    <label>UNIT PRICE OF BUYING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>