force-app/main/default/objects/TRSBill__c/fields/UnitPriceOfBuyUSD__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceOfBuyUSD__c</fullName>
    <label>UNIT PRICE OF BUYING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>