force-app/main/default/objects/TRSBill__c/fields/UnitPriceOfSellLocal__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceOfSellLocal__c</fullName>
    <label>UNIT PRICE OF SELLING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>