force-app/main/default/objects/TRSBill__c/fields/UnitPriceOfSellUSD__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceOfSellUSD__c</fullName>
    <label>UNIT PRICE OF SELLING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>