force-app/main/default/objects/TRSBill__c/fields/UnpaidBalBuyLocal__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalBuyLocal__c</fullName>
    <label>UNPAID BALANCE OF BUYING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>