force-app/main/default/objects/TRSBill__c/fields/UnpaidBalBuyUSD__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalBuyUSD__c</fullName>
    <label>UNPAID BALANCE OF BUYING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>