force-app/main/default/objects/TRSBill__c/fields/UnRcvBalLocal__c.field-meta.xml
<CustomField>
    <fullName>UnRcvBalLocal__c</fullName>
    <label>UNRECEIVED BALANCE OF SELLING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>