force-app/main/default/objects/TRSBill__c/fields/UnRcvBalUSD__c.field-meta.xml
<CustomField>
    <fullName>UnRcvBalUSD__c</fullName>
    <label>UNRECEIVED BALANCE OF SELLING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>