force-app/main/default/objects/TRSBill__c/recordTypes/GoodsPOBilling.recordType-meta.xml
<RecordType>
    <fullName>GoodsPOBilling</fullName>
    <active>true</active>
    <label>Goods P/O Billing</label>
</RecordType>