force-app/main/default/objects/TRSBill__c/recordTypes/GoodsSOBilling.recordType-meta.xml
<RecordType>
    <fullName>GoodsSOBilling</fullName>
    <active>true</active>
    <label>Goods S/O Billing</label>
</RecordType>