force-app/main/default/objects/TRSBill__c/recordTypes/GoodsSOPOBilling.recordType-meta.xml
<RecordType>
    <fullName>GoodsSOPOBilling</fullName>
    <active>true</active>
    <label>Goods S/O+P/O Billing</label>
</RecordType>