force-app/main/default/objects/TRSBill__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>SalesOrderID__c</columns>
    <columns>Customer__c</columns>
    <columns>BillNameAtPrintLocal__c</columns>
    <columns>ChargeUnitTotal__c</columns>
    <columns>TaxRatioSell__c</columns>
    <columns>InvoiceTo__c</columns>
    <columns>UnitPriceOfSellLocal__c</columns>
    <columns>TotalAmountOfSellLocal__c</columns>
    <columns>AmountSelliInclTAXLocal__c</columns>
    <columns>PayTo__c</columns>
    <columns>UnitPriceOfBuyLocal__c</columns>
    <columns>AmountBuyInclTAX__c</columns>
    <columns>ProfitNICTaxLocal__c</columns>
    <filterScope>Everything</filterScope>
    <label>1.All</label>
</ListView>