force-app/main/default/objects/TRSBill__c/listViews/Payment_SB_Process_Standard_ID.listView-meta.xml
<ListView>
    <fullName>Payment_SB_Process_Standard_ID</fullName>
    <columns>NAME</columns>
    <columns>BillNameForInternal__c</columns>
    <columns>ApplicantSell__c</columns>
    <columns>AmountBuyInclTAX__c</columns>
    <columns>UnRcvBalLocal__c</columns>
    <columns>AmountSelliInclTAXLocal__c</columns>
    <columns>UnpaidBalBuyLocal__c</columns>
    <columns>RcvConfirmSell__c</columns>
    <columns>RcvTypeSell__c</columns>
    <columns>RcvSettledDate__c</columns>
    <columns>PayConfirmedBuy__c</columns>
    <columns>PayTypeBuying__c</columns>
    <columns>PaySettledDateBuying__c</columns>
    <filterScope>Everything</filterScope>
    <label>2.Payment(S&amp;B) Process-Standard(ID)</label>
    <language>en_US</language>
</ListView>